[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/justabit.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 2 )

[node name="PauseMenu" type="MarginContainer"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.12549, 0.133333, 0.145098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 600.0
margin_top = 264.0
margin_right = 1320.0
margin_bottom = 816.0
custom_constants/separation = 100

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 224.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 720.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 720.0
margin_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 160.0
margin_right = 560.0
margin_bottom = 228.0

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 400.0
margin_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 400.0
margin_bottom = 112.0

[node name="Resume" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 400.0
margin_bottom = 112.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "Resume"
align = 1

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 116.0
margin_right = 400.0
margin_bottom = 228.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 400.0
margin_bottom = 112.0

[node name="Quit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 400.0
margin_bottom = 112.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Quit"
align = 1
